Updated argument types
