# resources/store.py
@@ -9,9 +9,9 @@ from models import StoreModel
 
 from schemas import StoreSchema
 
-blp = Blueprint("stores", __name__, description="Operations on stores")
+blp = Blueprint("Stores", "store", description="Operations on stores")
 
-@blp.route("/store/<string:store_id>")
+@blp.route("/store/<int:store_id>")
 class Store(MethodView):
     @blp.response(200, StoreSchema)
     def get(self, store_id):
